--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -337,7 +337,7 @@ jobs:
       - name: Run installer (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          $MNE_INSTALLER_NAME /S /InstallationType=JustMe /AddToPath=1
+          ./$MNE_INSTALLER_NAME /S /InstallationType=JustMe /AddToPath=1
 
       - name: Export frozen environment definition
         if: ${{ matrix.arch == 'x86_64' }}
