--- a/recipes/mne-python_1.3/construct.yaml
+++ b/recipes/mne-python_1.3/construct.yaml
@@ -62,7 +62,7 @@ specs:
 
   # TODO: These need to actually be 1.3.0!
   - mne-base =1.2.3=*_0
-  # mne-installer-menus =1.2.3=*_0
+  - mne-installer-menus =1.2.3=*_0
   # mne-bids =0.11.1
   # mne-bids-pipeline =1.0.2
   # mne-qt-browser =0.4.0
