--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -333,12 +333,12 @@ jobs:
         run: |
           "C:\Program Files (x86)\Windows Kits\10\bin\10.0.17763.0\x86\signtool.exe" verify /pa /v $MNE_INSTALLER_NAME
 
-      # https://docs.anaconda.com/anaconda/install/silent-mode.html
+      # https://docs.anaconda.com/anaconda/install/silent-mode.html#windows
       - name: Run installer (Windows)
         if: ${{ runner.os == 'Windows' }}
         shell: cmd
         run: |
-          start /wait "" .\%MNE_INSTALLER_NAME /S /InstallationType=JustMe /AddToPath=1
+          start /wait "" %MNE_INSTALLER_NAME /S /InstallationType=JustMe /AddToPath=1
 
       - name: Export frozen environment definition
         if: ${{ matrix.arch == 'x86_64' }}
