--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -344,6 +344,8 @@ jobs:
         if: ${{ matrix.arch == 'x86_64' }}
         run: |
           source "${MNE_INSTALLATION_ROOT}/bin/activate"
+          # Make the activation persist
+          echo "source \"${MNE_INSTALLATION_ROOT}/bin/activate\"" >> $BASH_ENV
           mamba list --json > ${MNE_INSTALLER_NAME}.env.json
           cat ${MNE_INSTALLER_NAME}.env.json
 
@@ -360,7 +362,6 @@ jobs:
           /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1280x1024x24 -ac +extension GLX +render -noreset -nolisten tcp -nolisten unix
           export DISPLAY=":99"
           echo "DISPLAY=:99" >> $GITHUB_ENV
-          source ${MNE_INSTALLATION_ROOT}/bin/activate
           echo "Checking whether (Py)Qt is working"
           LD_DEBUG=libs python -c "from PyQt5.QtWidgets import QApplication, QWidget; app = QApplication([])"
 
@@ -373,7 +374,6 @@ jobs:
       - name: Check installation
         if: ${{ matrix.arch == 'x86_64' }}
         run: |
-          source "$MNE_INSTALLER_ROOT/bin/activate"
           conda info
           mamba list
 
