--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -347,6 +347,8 @@ jobs:
       - name: Export frozen environment definition
         if: ${{ matrix.arch == 'x86_64' }}
         run: |
+          ls -alR $MNE_INSTALLATION_ROOT/Scripts
+          ls -alR $MNE_INSTALLATION_ROOT/bin
           source "${MNE_INSTALLATION_ROOT}/bin/activate"
           # Make the activation persist
           echo "source \"${MNE_INSTALLATION_ROOT}/bin/activate\"" >> $BASH_ENV
