--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -347,6 +347,7 @@ jobs:
       - name: Export frozen environment definition
         if: ${{ matrix.arch == 'x86_64' }}
         run: |
+          ls -alR "$(cygpath -u $USERPROFILE)/mne-python/$MNE_INSTALLER_VERSION/*"
           source "${MNE_ACTIVATE}"
           mamba list --json > ${MNE_INSTALLER_NAME}.env.json
           cat ${MNE_INSTALLER_NAME}.env.json
