--- a/recipes/mne-python_1.3/construct.yaml
+++ b/recipes/mne-python_1.3/construct.yaml
@@ -63,75 +63,75 @@ specs:
   # TODO: These need to actually be 1.3.0!
   - mne-base =1.2.3=*_0
   - mne-installer-menus =1.2.3=*_0
-  # mne-bids =0.11.1
-  # mne-bids-pipeline =1.0.2
-  # mne-qt-browser =0.4.0
-  # mne-connectivity =0.4.0
-  # mne-faster =1.1.0
-  # mne-nirs =0.4.0
-  # mne-realtime =0.2.0
-  # mne-features =0.2.1
-  # mne-rsa =0.8
-  # mne-ari =0.1.1
-  # mne-kit-gui =1.0.1
-  # mne-icalabel =0.4  # [not win]
-  # openmeeg =2.5.5
-  # autoreject =0.4.0
-  # pyprep =0.4.2
+  - mne-bids =0.11.1
+  - mne-bids-pipeline =1.0.2
+  - mne-qt-browser =0.4.0
+  - mne-connectivity =0.4.0
+  - mne-faster =1.1.0
+  - mne-nirs =0.4.0
+  - mne-realtime =0.2.0
+  - mne-features =0.2.1
+  - mne-rsa =0.8
+  - mne-ari =0.1.1
+  - mne-kit-gui =1.0.1
+  - mne-icalabel =0.4  # [not win]
+  - openmeeg =2.5.5
+  - autoreject =0.4.0
+  - pyprep =0.4.2
   # Python
-  # python =3.10.8
-  # pip
-  # conda
-  # mamba
-  # openblas =0.3.21
-  # jupyter
-  # jupyterlab
-  # ipykernel
-  # nb_conda_kernels
-  # spyder-kernels
-  # spyder
-  # darkdetect
-  # qdarkstyle
+  - python =3.10.8
+  - pip
+  - conda
+  - mamba
+  - openblas =0.3.21
+  - jupyter
+  - jupyterlab
+  - ipykernel
+  - nb_conda_kernels
+  - spyder-kernels
+  - spyder
+  - darkdetect
+  - qdarkstyle
   # Excel I/O
-  # openpyxl
-  # xlrd
-  # Statistics
-  # pingouin
-  # pycircstat
+  - openpyxl
+  - xlrd
+  - Statistics
+  - pingouin
+  - pycircstat
   # MRI
-  # fsleyes
-  # dcm2niix
+  - fsleyes
+  - dcm2niix
   # Time-frequency analysis
-  # pactools
-  # tensorpac
-  # emd
-  # neurodsp
-  # bycycle
-  # fooof
+  - pactools
+  - tensorpac
+  - emd
+  - neurodsp
+  - bycycle
+  - fooof
   # Microstates
-  # mne-microstates =0.3.0
-  # pycrostates =0.2.0
+  - mne-microstates =0.3.0
+  - pycrostates =0.2.0
   # OpenNeuro.org data access
-  # openneuro-py
+  - openneuro-py
   # sleep staging
-  # sleepecg
-  # yasa
+  - sleepecg
+  - yasa
   # various biological signals (ECG, EOG, EMG, …)
-  # neurokit2
+  - neurokit2
   # GitHub client, https://cli.github.com
-  # gh
+  - gh
   # NeuroSpin needs the following
-  # questionary
-  # pqdm
-  # Viz
-  # matplotlib
-  # ipympl
-  # seaborn
-  # plotly
-  # vtk =9.2.2
+  - questionary
+  - pqdm
+  - Viz
+  - matplotlib
+  - ipympl
+  - seaborn
+  - plotly
+  - vtk =9.2.2
   # Temporary
   # for VS Code compatibility: https://github.com/microsoft/vscode-jupyter/issues/8552#issuecomment-1263940999
-  # ipywidgets <8
+  - ipywidgets <8
 
 condarc:
   channels:
