--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -439,7 +439,8 @@ jobs:
     if: github.ref_type == 'tag'
     runs-on: ubuntu-latest
     defaults:
-      shell: bash -el {0}
+      run:
+        shell: bash -el {0}
     steps:
       # These names should correspond to MNE_INSTALLER_ARTIFACT_ID in tools/extract_version.sh
 
