--- a/recipes/mne-python_1.3/construct.yaml
+++ b/recipes/mne-python_1.3/construct.yaml
@@ -61,7 +61,7 @@ specs:
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
   # TODO: These need to actually be 1.3.0!
-  - mne-base =1.2.3=*_0
+  - mne =1.2.3=*_0
   - mne-installer-menus =1.2.3=*_0
   - mne-bids =0.11.1
   - mne-bids-pipeline =1.0.2
@@ -94,7 +94,7 @@ specs:
   # Excel I/O
   - openpyxl
   - xlrd
-  - Statistics
+  # Statistics
   - pingouin
   - pycircstat
   # MRI
