--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -368,6 +368,7 @@ jobs:
 
       - name: Setup graphical support (Windows)
         if: ${{ runner.os == 'Windows' }}
+        shell: powershell
         run: |
           git clone --depth 1 https://github.com/pyvista/gl-ci-helpers.git
           ./gl-ci-helpers/appveyor/install_opengl.ps1
