--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -369,10 +369,9 @@ jobs:
 
       - name: Setup graphical support (Windows)
         if: ${{ runner.os == 'Windows' }}
-        shell: powershell
         run: |
           git clone --depth 1 https://github.com/pyvista/gl-ci-helpers.git
-          ./gl-ci-helpers/appveyor/install_opengl.ps1
+          powershell ./gl-ci-helpers/appveyor/install_opengl.ps1
 
       - name: Check installation
         if: ${{ matrix.arch == 'x86_64' }}
@@ -430,10 +429,10 @@ jobs:
           mne sys_info
 
           echo "Trying to import MNE and all additional packages included in the installer"
-          python tests/test_imports.py
-          python tests/test_gui.py
-          python tests/test_notebook.py
-          python tests/test_json_versions.py
+          python -u tests/test_imports.py
+          python -u tests/test_gui.py
+          python -u tests/test_notebook.py
+          python -u tests/test_json_versions.py
 
   # Release
   release:
